crates/oxc_codegen/tests/integration/snapshots/astro/self-closing_components_in_head_can_have_siblings.snap
---
source: crates/oxc_codegen/tests/integration/astro.rs
---
### Input
<html><head><BaseHead /><link href="test"></head><html>

### Expected (Go compiler)
import {
  Fragment,
  render as $$render,
  createAstro as $$createAstro,
  createComponent as $$createComponent,
  renderComponent as $$renderComponent,
  renderHead as $$renderHead,
  maybeRenderHead as $$maybeRenderHead,
  unescapeHTML as $$unescapeHTML,
  renderSlot as $$renderSlot,
  mergeSlots as $$mergeSlots,
  addAttribute as $$addAttribute,
  spreadAttributes as $$spreadAttributes,
  defineStyleVars as $$defineStyleVars,
  defineScriptVars as $$defineScriptVars,
  renderTransition as $$renderTransition,
  createTransitionScope as $$createTransitionScope,
  renderScript as $$renderScript,
  createMetadata as $$createMetadata
} from "http://localhost:3000/";

export const $$metadata = $$createMetadata(import.meta.url, { modules: [], hydratedComponents: [], clientOnlyComponents: [], hydrationDirectives: new Set([]), hoisted: [] });

const $$Component = $$createComponent(($$result, $$props, $$slots) => {

return $$render`<html><head>${$$renderComponent($$result,"BaseHead",BaseHead,{})}<link href="test">${$$renderHead($$result)}</head></html>`;
}, undefined, undefined);
export default $$Component;

### Actual (Oxc)
ERROR: Parse errors: [OxcDiagnostic { inner: OxcDiagnosticInner { message: "Expected `<` but found `EOF`", labels: Some([LabeledSpan { label: Some("`<` expected"), span: SourceSpan { offset: SourceOffset(55), length: 0 }, primary: false }]), help: None, note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }]
